# remote-iracing-setups

./: .dockerignore  .gitignore  LICENSE  README.md  config.json  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-and-push.yml  build_setup_hub.yml  docker-publish.yml
caddy/: CaddyFile  Caddyfile  Dockerfile
downloader_site/: Cargo.toml  Dockerfile  README.md  config.json
downloader_site/src/: api.rs  config.rs  downloader.rs  main.rs  models.rs  web.rs
setup_hub/: Cargo.toml  README.md
setup_hub/src/: main.rs
src/: config.rs  downloader.rs  main.rs  models.rs  web.rs
symlinker/: Cargo.toml
symlinker/src/: main.rs
