[package]
name = "apex-stealer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tokio-cron-scheduler = "0.10"
chrono = "0.4"
anyhow = "1.0"
base64 = "0.22"
tower = "0.5"
